--- a/IIS/IIS.csproj
+++ b/IIS/IIS.csproj
@@ -56,7 +56,9 @@
     <Compile Include="HttpContext.cs" />
     <Compile Include="HttpRequest.cs" />
     <Compile Include="HttpResponse.cs" />
+    <Compile Include="HttpUtils.cs" />
     <Compile Include="IHttpHandler.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
